test/error/CMakeFiles/error_forward_on_undefined_buffer.dir/depend.make
# Empty dependencies file for error_forward_on_undefined_buffer.
# This may be replaced when dependencies are built.
